@@ -37,6 +37,7 @@ Mantis
  * Removed menu_inc.php file and related variable.  Moved this into print_menu().
  * Removed print_mantis_version().  Moved it into print_foooter().
  * Removed some unused code.
+ * Removed get_project_name() function.  Replaced with a more general get_project_field().
  * Renamed g_store_file_to to g_file_upload_method.
  * Renamed files to .php
  * Removed admin_cookiecheck.php3
